--- a/Views/Toppings/Details.cshtml
+++ b/Views/Toppings/Details.cshtml
@@ -72,6 +72,6 @@
         </tbody>
     </table>
     @Html.ActionLink("Go Back", "Index", "Pizza")
-    <a href="@Url.Action("OrerNow","Users")"><button class="btn btn-warning">Order Now</button></a>
+    <a href="@Url.Action("Index","Orders")"><button class="btn btn-warning">Order Now</button></a>
 </body>
 </html>
