--- a/Views/Toppings/GetToppings.cshtml
+++ b/Views/Toppings/GetToppings.cshtml
@@ -2,7 +2,7 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{ }
+@{}
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
@@ -47,33 +47,41 @@
 
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div col-sm-6 col-md="6">
-                <h4 style="color: #1efffe">@ViewBag.pizza.Name </h4>
-                <p>your pizza name is @ViewBag.pizza.Name</p>
-                <img src=@ViewBag.pizza.Images style="width:300px;height:300px;">
-                 <h3 style="color: #1efffe">Please select the Toppings </h3>
-         </div>
-            <div class="col-sm-6 col-md-6" >
-                <form asp-controller="Toppings" asp-action="GetToppings" method="post" style="align-items:center; margin-top:70px; text-align:center ">
-                    @foreach (var item in Model.Toppings)
-                    {
-            <br>
-                            <div class="form-check">
+ @if (ViewBag.pizza != null)
+{
+<div class="container">
+    <div class="row">
+        <div col-sm-6 col-md="6">
+            <h4 style="color: #1efffe">@ViewBag.pizza.Name </h4>
+            <p>your pizza name is @ViewBag.pizza.Name</p>
+            <img src=@ViewBag.pizza.Images style="width:300px;height:300px;">
+            <h3 style="color: #1efffe">Please select the Toppings </h3>
+        </div>
+        <div class="col-sm-6 col-md-6">
+            <form asp-controller="Toppings" asp-action="GetToppings" method="post" style="align-items:center; margin-top:70px; text-align:center ">
+                @foreach (var item in Model.Toppings)
+                {
+<br>
+                    <div class="form-check">
 
-                                <label class="form-check-label" for="flexRadioDefault1">
-                                    <h5 style="color: #1efffe"> @Html.RadioButtonFor(m => m.checks, @item.ID) @item.Name  <b> $ @item.Price </b></h5>
-                                </label>
-                            </div>}
-                    <br />
-                    <div class="form-group">
-                        <button type="submit" class="btn " onclick="Find()">Submit</button>
-                    </div>
-                </form>
-            </div>
+                        <label class="form-check-label" for="flexRadioDefault1">
+                            <h5 style="color: #1efffe"> @Html.RadioButtonFor(m => m.checks, @item.ID) @item.Name  <b> $ @item.Price </b></h5>
+                        </label>
+                    </div>}
+                <br />
+                <div class="form-group">
+                    <button type="submit" class="btn " onclick="Find()">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
-    </div>
-   
+</div>
+    }
+else{
+    <script>
+        alert("Please login or register");
+        window.location.href = "/Users";
+    </script>
+    }
 </body>
 </html>
